[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.3"
log = "0.4.17"
futures = "0.3"
bytemuck = { version = "1.8", features = ["derive"] }
cgmath = "0.18.0"
bitflags = "1.3.2"
image = { version = "0.24", features = ["png", "jpeg"] }
directories = "4.0.1"
env_logger = "0.10.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backtrace = "0.3"
noise = "0.8.2"

wgpu = { workspace = true }